# classifier

./: .env.example  .gitignore  README.md  category.py  config.py  constants.py  few_shots.py  llm.py  main.py  prompt.py  pyproject.toml  utils.py
few_shots/: industry_multi.py  industry_single.py
grammar_files/: README.md  grammar_from_interface.gbnf  interface.ts  my_cat.gbnf
grammar_template/: multi_label.j2  single_label.j2
grammar_templates/: multi_label.j2  single_label.j2
prompt_templates/: classifier.j2  intent.j2  multi_classifier.j2
