[tool.poetry]
name = "classifier"
version = "0.1.0"
description = ""
authors = ["Jose Berrio <aldarisbm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
llama-cpp-python = "^0.2.60"
python-dotenv = "^1.0.1"
pydantic = "^2.6.4"
jinja2 = "^3.1.3"
pydantic-settings = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

